crates/icydb-core/tests/ui/db/persisted_row_field_hints_removed.rs
use icydb_derive::PersistedRow;

#[derive(PersistedRow)]
struct RemovedHintEntity {
    #[icydb(meta)]
    payload: String,
}

fn main() {}
